%% AstraNotes - Class Diagram
%% Reflects implemented architecture from CLAUDE.md.
%% NoteManager is planned for Sprint 1 (orchestrator). All other classes exist in code today.

classDiagram
    direction LR

    class Note {
        +UUID id
        +str title
        +str body
        +bool is_private
        +datetime created_at
        +datetime modified_at
        +list~str~ tags
    }

    class NoteRepository {
        <<abstract>>
        +save(note: Note) None
        +get(note_id: UUID) Note
        +list_all() list~Note~
        +update(note: Note) None
        +delete(note_id: UUID) None
    }

    class JsonFileRepository {
        -Path data_dir
        +__init__(data_dir: Path)
        +save(note: Note) None
        +get(note_id: UUID) Note
        +list_all() list~Note~
        +update(note: Note) None
        +delete(note_id: UUID) None
    }

    class PrivacyService {
        -Fernet fernet
        +__init__(key: bytes)
        +encrypt(body: str) bytes
        +decrypt(data: bytes) str
        +generate_key() bytes
    }

    class ValidationLayer {
        +validate(note: Note) None
    }

    class NoteManager {
        -NoteRepository repository
        -PrivacyService privacy
        -ValidationLayer validator
        +create_note(title, body, is_private, tags) Note
        +edit_note(note_id, title, body) Note
        +delete_note(note_id) None
        +toggle_privacy(note_id) Note
        +list_notes() list~Note~
        +search_notes(keyword: str) list~Note~
    }

    class AstraNotesError {
        <<exception>>
    }
    class NoteNotFoundError {
        <<exception>>
    }
    class PersistenceError {
        <<exception>>
    }
    class ValidationError {
        <<exception>>
    }

    NoteRepository <|-- JsonFileRepository
    AstraNotesError <|-- NoteNotFoundError
    AstraNotesError <|-- PersistenceError
    AstraNotesError <|-- ValidationError

    NoteManager o--> NoteRepository : repository
    NoteManager o--> PrivacyService : privacy
    NoteManager o--> ValidationLayer : validator
    NoteManager ..> Note : creates / mutates
    JsonFileRepository ..> Note : (de)serializes
    JsonFileRepository ..> NoteNotFoundError : raises
    JsonFileRepository ..> PersistenceError : raises
    PrivacyService ..> PersistenceError : raises on InvalidToken
    ValidationLayer ..> ValidationError : raises
